--- a/GoogleMapScraper/appsettings.json
+++ b/GoogleMapScraper/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-IPRCQMI\\SQL2022;Initial Catalog=Franchisor;User ID=sa;Password=orion123@;"
+    //"DefaultConnection": "Data Source=18.222.27.177;Initial Catalog=Franchisor;Persist Security Info=True;User ID=Mobilizedba;Password=Mobilizedba; Connect Timeout=600; MultipleActiveResultSets=true;",
+    "DefaultConnection": "Data Source=DESKTOP-IPRCQMI\\SQL2022;Initial Catalog=Franchisor;Persist Security Info=True;User ID=sa;Password=orion123@; Connect Timeout=600; MultipleActiveResultSets=true;"
 
   }
 }
